--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "browserify": "^13.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-connect": "^4.0.0",
     "gulp-ruby-sass": "^2.0.6",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
